<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    >

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="0dp"
        android:layout_height="287dp"
        style="@style/customDialogBox"
        app:cardCornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_charm_circle_tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:src="@drawable/charmcircltick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_request_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:includeFontPadding="false"
                android:text="@string/request_received"
                style="@style/DayNightIssueTextColorStyle"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view_charm_circle_tick" />

            <TextView
                android:id="@+id/tv_deposit_request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="19dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="@dimen/sp_4"
                android:text="@string/your_deposit_request_has_been_received_you_will_be_notified_once_we_verify_and_add_the_fund_to_your_buying_power"
                style="@style/YourDepositRequest"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_request_receiver" />

            <Button
                android:id="@+id/btn_okay"
                android:layout_width="137dp"
                android:layout_height="38dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorEnabled"
                android:gravity="center"
                android:text="@string/okay"
                android:textColor="#041F00"
                android:textSize="15sp"
                app:layout_constraintDimensionRatio="137:38"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_deposit_request" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
